--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
-    "bootstrap": "^5.3.2"
+    "bootstrap": "^5.3.2",
+    "popmotion": "^11.0.5"
   }
 }
