--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
-    "popmotion": "^11.0.5"
+    "popmotion": "^11.0.5",
+    "sass": "^1.68.0"
   }
 }
